--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-certifi==2018.4.16
-click==6.7
-Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-numpy==1.14.5
-pandas==0.23.3
-python-dateutil==2.7.3
-pytz==2018.5
-six==1.11.0
-SQLAlchemy==1.2.10
-Werkzeug==0.14.1
+certifi==2018.11.29
+gunicorn==19.9.0
+kaggle==1.5.0
+psycopg2==2.7.6.1
+python-slugify==1.2.6
+tqdm==4.28.1
+Unidecode==1.0.23
